--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"prettier": "prettier-eslint --write \"src/**/*.+(js|jsx)\"",
 		"prettier-dry-run": "prettier-eslint \"src/**/*.+(js|jsx)\" -l debug",
 		"copy": "highlight -O rtf test.js --style molokai | pbcopy",
-		"deploy": "npm run build && gh-pages -d build"
+		"deploy": "npm run build && gh-pages -d build",
+		"ghpages": "gh-pages -d build"
 	}
 }
